<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.bts</groupId>
	<artifactId>demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>17</java.version>
		<thoth.version>2.0.0-RC1</thoth.version>
		<thoth-jooq.version>2.0.0-BETA9</thoth-jooq.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- a small package for loading dotenv easily -->
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>dotenv-java</artifactId>
			<version>2.3.1</version>
		</dependency>
		<!-- to ensure it runs thoth dependencies must be imported separately -->
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.14.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.14.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.14.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jdk8</artifactId>
			<version>2.14.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.14.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator -->
		<dependency>
			<groupId>com.fasterxml.uuid</groupId>
			<artifactId>java-uuid-generator</artifactId>
			<version>3.1.5</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/io.vavr/vavr -->
		<dependency>
			<groupId>io.vavr</groupId>
			<artifactId>vavr</artifactId>
			<version>0.10.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.vavr/vavr-jackson -->
		<dependency>
			<groupId>io.vavr</groupId>
			<artifactId>vavr-jackson</artifactId>
			<version>0.10.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.vavr/vavr-match -->
		<dependency>
			<groupId>io.vavr</groupId>
			<artifactId>vavr-match</artifactId>
			<version>0.10.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jooq/jooq -->
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>jooq</artifactId>
			<version>3.17.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-clients</artifactId>
			<version>3.0.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-core</artifactId>
			<version>3.4.23</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.projectreactor.kafka/reactor-kafka -->
		<dependency>
			<groupId>io.projectreactor.kafka</groupId>
			<artifactId>reactor-kafka</artifactId>
			<version>1.3.12</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.vertx/vertx-core -->
		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-core</artifactId>
			<version>4.3.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.vertx/vertx-pg-client -->
		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-pg-client</artifactId>
			<version>4.3.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.vertx/vertx-sql-client -->
		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-sql-client</artifactId>
			<version>4.3.3</version>
		</dependency>
		<!-- adding thoth from maven -->
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>commons-events</artifactId>
			<version>${thoth.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-core</artifactId>
			<version>${thoth.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-core-reactor</artifactId>
			<version>${thoth.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-jooq</artifactId>
			<version>${thoth.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-jooq-reactor</artifactId>
			<version>${thoth.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/fr.maif/jooq-async-api -->
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>jooq-async-api</artifactId>
			<version>2.0.0-BETA9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/fr.maif/jooq-async-reactive -->
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>jooq-async-reactive</artifactId>
			<version>2.0.0-BETA9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/fr.maif/jooq-async-api-tck -->
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>jooq-async-api-tck</artifactId>
			<version>2.0.0-BETA9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/fr.maif/jooq-async-jdbc -->
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>jooq-async-jdbc</artifactId>
			<version>2.0.0-BETA9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/fr.maif/thoth-jooq-async -->
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-jooq-async_2.13</artifactId>
			<version>1.1.6</version>
		</dependency>
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-jooq-reactor</artifactId>
			<version>${thoth.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-kafka-consumer-akka</artifactId>
			<version>${thoth.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.maif</groupId>
			<artifactId>thoth-kafka-consumer-reactor</artifactId>
			<version>${thoth.version}</version>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
